version 2.0.2 (TBD)
	- ms: Checking if there is a symbol, when specifying `.so`s
	- Fixed a invalid extension check:
        Instead of checking, whether the filename ends with .o,
        the code was only checking if .o is in the filename.
	- Minor: clarified help text in ms-binary
	- Updated Typescript Dependencies
	- Fixed issue when `pkg-config` is not installed
	- Makefile, added missing `-ldl` to the link step for `ms`. This caused
	  issues on older systems (How did that work without?)
	- Makefile removed duplicated 'check' target
	- Makefile added 'DEBUG' variable. To use debug mode, use
	    `make DEBUG=1 -B`, which will define `ENABLE_DEBUG` and `-g` for debug
		symbols.
 	- Reworked printing if the check fails.
		Will now always print the hex, and binary if compiled with debug

version 2.0.1 (2023-01-19)
	- Fixed a bug causeing out-of-memory after repeated calls to 'measure'
	  from the typescript wrapper
	- API: added the unload_{all,last} function to the native module

version 2.0.0 (2023-01-11)
	- BREAKING CHANGES  (API changed)
	- MS can now load elf (*.o) files (specific symbol or 'just the first one')
	- MS can now load bin files (raw machine code)

	- MS can now measure an arbitrary number of functions of arbitrary type
	  the default was: "one Shared Object and two ASMs"
	  now one can load a colorful mix of ELFs / BINs / ASMs shared_objects

	- MS no longer measures 'ac-bc-ac-ac-bc'. Instead, all loaded functions are
	  executed exactly once, but in a random permutation (abc-bca-abc-cba-cab).

	- MS no longer needs to have three functions calculating the same.
	  In fact, equality check is optional.

	- Directory separation of libmeasuresuite and ts-binding to make forking
	and reuse easier
	
	- Auto-detect AssemblyLine. Compile without it, if not available.
	  (disable with make AL=0 -C lib)

	- removed uiCA wrapper, as now considered out of scope

	- introducing cli-tool ms

	- npm package release

version 1.3.0 (2022-09-11)