@@ -1,4 +1,8 @@
 version 2.0.2 (TBD)
+	- lib: Bug worked around, which caused stack smashing. I don't know why this is
+	  happening, but it turns out that if `get_fdperf` is inlined, the syscall
+	  overwrites the canary. If we prevent inlining, this issue does not
+	  appear. Also added some more attibutes like size to the attr.
 	- ms: Checking if there is a symbol, when specifying `.so`s
 	- Fixed a invalid extension check:
         Instead of checking, whether the filename ends with .o,
